# shiboru

./: Cargo.toml  flake.nix
src/: lib.rs  picker.rs  ui.rs
src/sources/: buffers.rs  files.rs  grep.rs  mod.rs
