[package]
name = "shiboru"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shiboru (絞る) — fuzzy finder for files, grep, LSP symbols, and more in Neovim"
homepage = "https://github.com/pleme-io/shiboru"
repository = "https://github.com/pleme-io/shiboru"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "fuzzy-finder", "telescope", "search"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
waku = { path = "../waku", version = "0.1.0" }
furui = { path = "../furui", version = "0.1.0" }
